# codyn

./: .gitignore  .gitmodules  AUTHORS  Makefile  Makefile.am  README  autogen.sh  codyn-webots.pc.in  codyn.pc.in  configure.ac  cpg-network-rt.pc.in  cpg-network-webots.pc.in  cpg-network.pc.in  mingw-configure
blender/: Makefile.am  __init__.py  camera.py  codyn.py  gui.py  importer.py  panel.py  simulator.py
blender/data/: gui.atlas  library.blend  makeatlas.py
codyn/: 6d.cdn  Cdn.py  Makefile.am  cdn-annotatable.c  cdn-annotatable.h  cdn-attribute.c  cdn-attribute.h  cdn-auto-layout.c  cdn-auto-layout.h  cdn-cfile-stream.c  cdn-cfile-stream.h  cdn-compile-context.c  cdn-compile-context.h  cdn-compile-error.c  cdn-compile-error.h  cdn-debug.c  cdn-debug.h  cdn-edge-action.c  cdn-edge-action.h  cdn-edge.c  cdn-edge.h  cdn-embedded-context.c  cdn-embedded-context.h  cdn-embedded-string.c  cdn-embedded-string.h  cdn-enum-types.c.template  cdn-enum-types.h.template  cdn-event.c  cdn-event.h  cdn-expansion-context.c  cdn-expansion-context.h  cdn-expansion.c  cdn-expansion.h  cdn-expression-tree-iter.c  cdn-expression-tree-iter.h  cdn-expression.c  cdn-expression.h  cdn-forward-decl.h  cdn-function-argument.c  cdn-function-argument.h  (+95 more)
codyn-webots/: Makefile.am  codyn-webots.c  codyn-webots.h
codyn/instructions/: Makefile.am  cdn-instruction-boxed.c  cdn-instruction-boxed.h  cdn-instruction-constant.c  cdn-instruction-constant.h  cdn-instruction-custom-function-ref.c  cdn-instruction-custom-function-ref.h  cdn-instruction-custom-function.c  cdn-instruction-custom-function.h  cdn-instruction-custom-operator-ref.c  cdn-instruction-custom-operator-ref.h  cdn-instruction-custom-operator.c  cdn-instruction-custom-operator.h  cdn-instruction-function.c  cdn-instruction-function.h  cdn-instruction-index.c  cdn-instruction-index.h  cdn-instruction-matrix.c  cdn-instruction-matrix.h  cdn-instruction-number.c  cdn-instruction-number.h  cdn-instruction-operator.c  cdn-instruction-operator.h  cdn-instruction-rand.c  cdn-instruction-rand.h  cdn-instruction-variable.c  cdn-instruction-variable.h  cdn-instruction.c  cdn-instruction.h  cdn-instructions.h
codyn/integrators/: Makefile.am  cdn-integrator-euler.c  cdn-integrator-euler.h  cdn-integrator-leap-frog.c  cdn-integrator-leap-frog.h  cdn-integrator-predict-correct.c  cdn-integrator-predict-correct.h  cdn-integrator-runge-kutta.c  cdn-integrator-runge-kutta.h  cdn-integrator-state.c  cdn-integrator-state.h  cdn-integrator-stub.c  cdn-integrator-stub.h  cdn-integrator.c  cdn-integrator.h
codyn/operators/: Makefile.am  cdn-operator-delayed.c  cdn-operator-delayed.h  cdn-operator-df-dt.c  cdn-operator-df-dt.h  cdn-operator-diff.c  cdn-operator-diff.h  cdn-operator-dt.c  cdn-operator-dt.h  cdn-operator-linsolve.c  cdn-operator-linsolve.h  cdn-operator-pdiff.c  cdn-operator-pdiff.h  cdn-operator-simplify.c  cdn-operator-simplify.h  cdn-operator.c  cdn-operator.h
codyn/tree-algorithms/: Makefile.am  cdn-tree-algorithms-canonicalize.c  cdn-tree-algorithms-derive.c  cdn-tree-algorithms-linsolve.c  cdn-tree-algorithms-private.c  cdn-tree-algorithms-private.h  (+3 more)
cpg-network/: Makefile.am  cpg-annotatable.c  cpg-annotatable.h  cpg-attribute.c  cpg-attribute.h  cpg-compile-context.c  cpg-compile-context.h  cpg-compile-error.c  cpg-compile-error.h  cpg-debug.c  cpg-debug.h  cpg-embedded-context.c  cpg-embedded-context.h  cpg-embedded-string.c  cpg-embedded-string.h  cpg-enum-types.c.template  cpg-enum-types.h.template  cpg-event.c  cpg-event.h  cpg-expansion.c  cpg-expansion.h  cpg-expression-private.h  cpg-expression-tree-iter.c  cpg-expression-tree-iter.h  cpg-expression.c  cpg-expression.h  cpg-forward-decl.h  cpg-function-argument.c  cpg-function-argument.h  cpg-function-polynomial-piece.c  cpg-function-polynomial-piece.h  cpg-function-polynomial.c  cpg-function-polynomial.h  cpg-function.c  cpg-function.h  cpg-group.c  cpg-group.h  cpg-import-alias.c  cpg-import-alias.h  cpg-import.c  (+123 more)
cpg-network-webots/: Makefile.am  cpg-network-webots-private.h  cpg-network-webots.c  cpg-network-webots.h
cpg-parser/: Makefile.am  cpg-parser.c  cpg-readline-stream.c
data/: Makefile.am  cdn-listings.tex  cdn-listings.tex.in  cdn-mode.el  cdn.lang  cdn.lang.in  cdn.sty  cdn.xml.in  codyn-mode.el  codyn.sty  cpg-mode.el  cpg-network.dtd  cpg.lang  cpg.sty  cpg.xml  cpg.xml.in  diff-emacs-keywords.sh  hopf.cpg  keywords.list  list-emacs-keywords.sh  listings-from-emacs-keywords.sh  make-cdn-lang.py  make-cdn-listings.py  phase.cpg  selectors.list
docs/: Makefile.am  extracterror.py  generatecode.py
examples/: Makefile  Makefile.am  acceleration.cdn  basic_hopf.cdn  bouncingball.cdn  closed.cdn  closedfixed.cdn  coupling.cdn  delayed.cdn  hardcontact.cdn  matsuoka.cdn  morphed.cdn  multicoupling.cdn  multipendulum.cdn  nodes.cdn  panto.cdn  pendulum.cdn  plotcdn.m  pogopoints.cdn  selectors.cdn  slip.cdn  symbolic.cdn  vanderpol.cdn
src/: Makefile.am  cpg-debug.c  cpg-debug.h  cpg-expression-private.h  cpg-expression.c  cpg-expression.h  cpg-link-private.h  cpg-link.c  cpg-link.h  cpg-math.c  cpg-math.h  cpg-mutex.c  cpg-mutex.h  cpg-network-private.h  cpg-network.c  cpg-network.h  cpg-object-private.h  cpg-object.c  cpg-object.h  cpg-property.c  cpg-property.h  cpg-shared-network.c  cpg-shared-network.h  cpg-stack.c  cpg-stack.h  cpg-state-private.h  cpg-state.c  cpg-state.h  cpg-thread.c  cpg-thread.h  cpg-tokenizer.c  cpg-utils.h
tests/: Makefile  Makefile.am  constraints.c  direct.c  discrete.c  expression.c  file.c  group.c  import.c  import.cdn  import.cpg  indices.c  integrator.c  interface.c  matrix.c  network.c  node.c  object.c  operator.c  property.c  template.c  template.cpg  test.c  test.cpg  test_clip.cdn  test_constraints.cdn  test_cycle.cdn  test_diff.cdn  test_direct.cdn  test_direct_events.cdn  test_discrete.cdn  test_file.cdn  test_group_integrate_multiple_euler.cdn  test_group_integrate_multiple_euler.cpg  test_import.cdn  test_import.cpg  test_import_templates.cdn  test_import_templates.cpg  test_indices.cdn  test_input.txt  (+11 more)
(+390 files in other folders)
